--- a/gerador_html.html
+++ b/gerador_html.html
@@ -53,12 +53,9 @@
 <body>
   <h1>Geração de Sistemas – Estrelas, Planetas, Belts e Visualização Interativa (Órbitas Oficiais)</h1>
   <p>
-    Este código gera sistemas com informações de estrelas, planetas e belts seguindo as distâncias orbitais (MAO = 0.61 UA, baseline = 3.1 UA).  
-    A coluna de Temperaturas exibe valores de temperatura base, efeito greenhouse e média, além de variações sazonais (Equador/Polos).  
-    A coluna "Vida Nativa" contém subdivisões (Biomass, Biocomplexity, Native Sophonts, Biodiversity, Compatibility)  
-    e também há um “Native Lifeform Profile” (código “MXDC”) que agrega algumas dessas variáveis.  
+    Você gosta de goiaba?  
     <br><br>
-    <strong>Agora inclui a regra de que só há sophonts se Biocomplexity ≥ 8, e rolagem subsequente para artefatos conforme descrito.</strong>
+    <strong>Eu gosto!</strong>
   </p>
 
   <label for="numSystems">Número de sistemas:</label>
